2003-04-16  Andreas Kupries  <andreask@activestate.com>

	* installer.tcl: Added 'des' to list. Reworked according to
	  feedback from Don.

	* tcllib_version.tcl: Added, for sharing with other scripts.

	* modules/stats/pkgIndex: Now throwing an error when trying to
	  load 'stats'.

	* modules/struct/ChangeLog: Typo correction.

2003-04-15  Andreas Kupries  <andreask@activestate.com>

	* installer.tcl: Added 'md4' to installer.tcl

2003-04-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/md4: New module md4 created: MD4 hash algorithm.

2003-04-15  Andreas Kupries  <andreask@pliers.activestate.com>

	* installer.tcl: EXPERIMENTAL. New installer for tcllib. Currently
	  only cmdline based. Use -help to get help.

2003-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (check-doc-markup): Fixed setting for DOC_FLAGS. The
	  option '-visualwarn' does not exist anymore. Replaced by the
	  option '-deprecated'. Thanks to Larry Virden for reporting the
	  problem.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* install.tcl: Changed to notify the user if the directory to
	  install is not a source distribution but a CVS snapshot. Right
	  now a direct installation of a CVS snapshot is not possible.

	* Fixed bug #614591 throughout. Numerous modules updated. Also
	  first round of getting version number consistents, and updated
	  for a 1.4 release of the whole.

2003-04-09  Andreas Kupries  <andreask@activestate.com>

	* New module: devtools. Internal use only for now. Does not
	  contain true packages.

2003-04-01  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in (MODULES): Added the soundex module.

2003-03-28  Andreas Kupries  <andreask@activestate.com>

	* README: Updated information about acceptable documentation
	  formats, i.e. added doctools, made it the most prefered
	  format. This fixes the [Bug #685270], reported by Larry Virden
	  <lvirden@users.sourceforge.net>.
