@@ -1,6 +1,6 @@
 # mkIndex.tcl --
 #
-#	This script generates a master pkgIndex.tcl file for tcllib.  It expects 
+#	This script generates a pkgIndex.tcl file for tcllib.  It expects 
 #	several arguments:
 #		outdir		directory in which to create pkgIndex.tcl
 #		package		package name (tcllib)
@@ -8,35 +8,47 @@
 #		modules		list of modules to include
 #
 # Copyright (c) 1999-2000 Ajuba Solutions.
-# Copyright (c) 2003      A. Kupries
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
 
-proc gen_main_index {outdir package version distribution} {
-    set   index [open [file join $outdir pkgIndex.tcl] w]
-    puts $index "# Tcl package index file, version 1.1"
-    puts $index "# Generated by $package installer for version $version"
-    puts $index ""
-    puts $index "set maindir \$dir"
-
-    foreach pi [lsort [glob -nocomplain [file join $distribution * pkgIndex.tcl]]] {
-	set subdir [file tail [file dirname $pi]]
-	puts $index "set dir \[file join \$maindir [list $subdir]\] ;\t source \[file join \$dir pkgIndex.tcl\]"
-    }
-
-    puts  $index "unset maindir"
-    puts  $index ""
-    close $index
-    return
+foreach {outdir package version} $argv {
+    break
 }
+## set modules [lrange $argv 3 end]
+cd $outdir
+puts "Making pkgIndex.tcl in [pwd]"
 
+## First run the standard package indexer. This creates a pkgIndex.tcl
+## file in the directory modules. Read an transform this file into the
+## final form.
 
-foreach {outdir package version} $argv {break}
-set distribution [file join [file dirname [info script]] modules]
+# Add -verbose in case of trouble
+pkg_mkIndex modules */*.tcl
 
-puts __$distribution
+set base  [open [file join modules pkgIndex.tcl] r]
+set index [open pkgIndex.tcl w]
 
-gen_main_index $outdir $package $version $distribution
+set trailer [list]
+
+while {![eof $base]} {
+    if {[gets $base line] < 0} {continue}
+    puts $index $line
+    if {[regexp {^package ifneeded} $line]} {
+	foreach {_ _ pkg ver} [split $line] break
+	lappend trailer "\tcatch \{package require $pkg $ver\}"
+    }
+}
+close $base
+
+puts  $index ""
+puts  $index "package ifneeded $package $version \{"
+puts  $index [join $trailer \n]
+puts  $index "\tpackage provide $package $version"
+puts  $index "\ttclLog \"Don't do \\\"package require $package\\\", ask for individual modules.\""
+puts  $index "\}"
+close $index
+
+file delete [file join modules pkgIndex.tcl]
 exit
